--- a/ui/components/menus/dropdown/_index.scss
+++ b/ui/components/menus/dropdown/_index.scss
@@ -470,6 +470,10 @@
           background-color: transparent;
         }
       }
+
+      .slds-indicator_unsaved{
+        top: -4px;
+      }
     }
 
     /**
