--- a/ui/components/tabs/sub-tabs/_index.scss
+++ b/ui/components/tabs/sub-tabs/_index.scss
@@ -39,7 +39,8 @@
   letter-spacing: 0;
   margin-bottom: 0;
 
-  &.slds-active {
+  &.slds-active,
+  &.slds-is-open {
     background: $color-background-context-bar-brand-light;
   }
 
